Changelog
=========

5.4-dev - (unreleased)
----------------------

5.3 - (2013-08-09)
------------------
* Change: Removed dependency to eea.rdfrepository
  [szabozo0 #14323]

5.2 - (2013-08-07)
------------------
* Cleanup: Remove p4a.subtyper dependency
  [voineali #15234]

5.1 - (2013-06-17)
------------------
* Change: use BeautifulSoup4 instead of deprecated BS3
  [tiberich #14584]

5.0 - (2012-11-29)
------------------
* Bug fix: remove bad call to absolute_url super
  [tiberich #10130]

4.9 - (2012-11-22)
------------------
* Bug fix: comform to eea.rdfmarshaller API changes
  [tiberich #3981]

4.8 - (2012-07-13)
------------------
* Bug Fix: Fixed i18n missing tags .pt
  [prospchr refs #5162]

4.7 - (2012-06-13)
------------------
* Bug fix: fixes several layout issues with soer countries
  portlets padding/margin.
  [demarant fixes #5265]
* Bug fix: updated link of countries flexibility reports.
  [demarant fixes #5266]
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]

4.6 - (2012-04-26)
------------------
* Bug fix: fixed soertopic_view template not to endup in error when missing topic is requested
  [ghicaale]

4.5 - (2012-03-05)
------------------
* Bug fix: properly link resources in css file
  [tiberich #4956]

4.4 - (2011-12-02)
------------------

4.3 - (2011-11-30)
------------------
* Change: Disabled location portlet since discomap service is not working anymore.
  [demarant]
* Change: changed the link to faceted search since its location has moved,
  necessary since we now do not show navigation on faceted.
  [demarant]

4.2 - (2011-11-28)
------------------
* Bug fix: Required themes and subject is handled by EEAContentTypes
  [voineali #4694]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
* Change: Migrated eea_soer.css.dtml from custom
  [szabozo0 #4161]
* Change: Removed obsolete related items, now replaced by viewlets
  [demarant #4541]